--- a/sports.html
+++ b/sports.html
@@ -9,13 +9,17 @@
 <h1>Sports</h1>
 
 <p align="center">
-<img src="Boston.jpg" width="500" height="350"> <img src="Patriots.jpg" width="500" height="350">
+<img src="Boston.jpg" width="500" height="350"> 
 </p>
 
 <p class="p1">Sports have been a huge part of my life. Growing up I always was playing sports, mainly baseball,
 basketball, or football. When I was young these were the only sports I played. I played on teams and just with
 friends on the playground. As I got older however I grew apart from football, and got into playing soccer.</p>
 
+ <p align="center">
+  <img src="patriots.jpg" width="500" height= "350"
+       </p>     
+ 
 <p class="p2">Growing up I always hated soccer and wanted nothing to do with it, but my eighth grade year I decided to try it out
 and actually ended up loving it. If it weren't for growing up playing baseball and loving baseball so much
 when I was younger, soccer would have been my favorite sport.</p>
