--- a/sports.html
+++ b/sports.html
@@ -17,7 +17,7 @@ basketball, or football. When I was young these were the only sports I played. I
 friends on the playground. As I got older however I grew apart from football, and got into playing soccer.</p>
 
  <p align="center">
-  <img src="patriots.jpg" width="500" height= "350"
+  <img src="Patriots.jpg" width="500" height= "350"
  </p>     
  
 <p class="p2">Growing up I always hated soccer and wanted nothing to do with it, but my eighth grade year I decided to try it out
