--- a/whyIchoseUmaine.html
+++ b/whyIchoseUmaine.html
@@ -14,14 +14,14 @@
 
 <p class="p4">I am from Maine, and have lived in Maine my entire life. I am originally from Dover-Foxcroft, Maine which
 is about 45 minutes away from Umaine. The two biggest reasons I chose to stay here in Maine is because of my girlfriend
-and fmaily.</p>
+and family.</p>
 
 <p class="p5"> My girlfriend and I started dating my Senior year in high school, she was a Sophmore at the time so by the
 time I graduated, we had created a very close bond. I knew that I didn't want to leave the state so I could still see her,
 and being only 45 minutes away from home was perfect. Being that close to home meant that she could come visit me when she
 had time throughout the week, and the weekends I could go home and visit her. This system worked perfectly through my first
 year of college, and we are still together to this day, she will be graduating high school this year and maybe won't have
-so much distance between us afetr she does graduate because it's hard going from seeing her everyday to seeing her 2 times
+so much distance between us after she does graduate because it's hard going from seeing her everyday to seeing her 2 times
 a week.</p>
 
 <p class="p6"> My family is also a big part of my life, and being 45 minutes away from them is much better then being in a
